add prediction service

--- a/Learning/scripts/data_prepare.ipynb
+++ b/Learning/scripts/data_prepare.ipynb
@@ -261,11 +261,7 @@
     "telemetry['vibration_last_hour'] = telemetry['vibration'].shift(1)"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-11-05T01:36:21.742862Z",
-     "start_time": "2024-11-05T01:36:21.727862Z"
-    }
+    "collapsed": false
    },
    "id": "fd5a2bc8aea07bf9",
    "execution_count": 203
@@ -311,26 +307,52 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "File ../asset-1/telemetry.json does not exist",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mFileNotFoundError\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[1], line 4\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mpandas\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01mpd\u001B[39;00m\n\u001B[0;32m      2\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mmatplotlib\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mpyplot\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01mplt\u001B[39;00m\n\u001B[1;32m----> 4\u001B[0m telemetry \u001B[38;5;241m=\u001B[39m \u001B[43mpd\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mread_json\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43m../asset-1/telemetry.json\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[0;32m      5\u001B[0m telemetry\u001B[38;5;241m=\u001B[39mtelemetry\u001B[38;5;241m.\u001B[39mrename(columns\u001B[38;5;241m=\u001B[39m{\u001B[38;5;241m0\u001B[39m: \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mkey\u001B[39m\u001B[38;5;124m\"\u001B[39m, \u001B[38;5;241m1\u001B[39m: \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124massetId\u001B[39m\u001B[38;5;124m\"\u001B[39m, \u001B[38;5;241m2\u001B[39m: \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mdatetime\u001B[39m\u001B[38;5;124m\"\u001B[39m, \u001B[38;5;241m3\u001B[39m: \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mpressure\u001B[39m\u001B[38;5;124m\"\u001B[39m, \u001B[38;5;241m4\u001B[39m:\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mrotate\u001B[39m\u001B[38;5;124m\"\u001B[39m, \u001B[38;5;241m5\u001B[39m:\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mvibration\u001B[39m\u001B[38;5;124m\"\u001B[39m, \u001B[38;5;241m6\u001B[39m:\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mvolt\u001B[39m\u001B[38;5;124m\"\u001B[39m})\n\u001B[0;32m      6\u001B[0m telemetry\u001B[38;5;241m=\u001B[39mtelemetry\u001B[38;5;241m.\u001B[39mdrop([\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mkey\u001B[39m\u001B[38;5;124m\"\u001B[39m, \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124massetId\u001B[39m\u001B[38;5;124m\"\u001B[39m], axis\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m1\u001B[39m)\n",
+      "File \u001B[1;32mD:\\Soft\\Python\\lib\\site-packages\\pandas\\io\\json\\_json.py:791\u001B[0m, in \u001B[0;36mread_json\u001B[1;34m(path_or_buf, orient, typ, dtype, convert_axes, convert_dates, keep_default_dates, precise_float, date_unit, encoding, encoding_errors, lines, chunksize, compression, nrows, storage_options, dtype_backend, engine)\u001B[0m\n\u001B[0;32m    788\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m convert_axes \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m \u001B[38;5;129;01mand\u001B[39;00m orient \u001B[38;5;241m!=\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mtable\u001B[39m\u001B[38;5;124m\"\u001B[39m:\n\u001B[0;32m    789\u001B[0m     convert_axes \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;01mTrue\u001B[39;00m\n\u001B[1;32m--> 791\u001B[0m json_reader \u001B[38;5;241m=\u001B[39m \u001B[43mJsonReader\u001B[49m\u001B[43m(\u001B[49m\n\u001B[0;32m    792\u001B[0m \u001B[43m    \u001B[49m\u001B[43mpath_or_buf\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    793\u001B[0m \u001B[43m    \u001B[49m\u001B[43morient\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43morient\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    794\u001B[0m \u001B[43m    \u001B[49m\u001B[43mtyp\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mtyp\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    795\u001B[0m \u001B[43m    \u001B[49m\u001B[43mdtype\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mdtype\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    796\u001B[0m \u001B[43m    \u001B[49m\u001B[43mconvert_axes\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mconvert_axes\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    797\u001B[0m \u001B[43m    \u001B[49m\u001B[43mconvert_dates\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mconvert_dates\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    798\u001B[0m \u001B[43m    \u001B[49m\u001B[43mkeep_default_dates\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mkeep_default_dates\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    799\u001B[0m \u001B[43m    \u001B[49m\u001B[43mprecise_float\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mprecise_float\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    800\u001B[0m \u001B[43m    \u001B[49m\u001B[43mdate_unit\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mdate_unit\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    801\u001B[0m \u001B[43m    \u001B[49m\u001B[43mencoding\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mencoding\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    802\u001B[0m \u001B[43m    \u001B[49m\u001B[43mlines\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mlines\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    803\u001B[0m \u001B[43m    \u001B[49m\u001B[43mchunksize\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mchunksize\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    804\u001B[0m \u001B[43m    \u001B[49m\u001B[43mcompression\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mcompression\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    805\u001B[0m \u001B[43m    \u001B[49m\u001B[43mnrows\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mnrows\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    806\u001B[0m \u001B[43m    \u001B[49m\u001B[43mstorage_options\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mstorage_options\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    807\u001B[0m \u001B[43m    \u001B[49m\u001B[43mencoding_errors\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mencoding_errors\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    808\u001B[0m \u001B[43m    \u001B[49m\u001B[43mdtype_backend\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mdtype_backend\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    809\u001B[0m \u001B[43m    \u001B[49m\u001B[43mengine\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mengine\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    810\u001B[0m \u001B[43m\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    812\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m chunksize:\n\u001B[0;32m    813\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m json_reader\n",
+      "File \u001B[1;32mD:\\Soft\\Python\\lib\\site-packages\\pandas\\io\\json\\_json.py:904\u001B[0m, in \u001B[0;36mJsonReader.__init__\u001B[1;34m(self, filepath_or_buffer, orient, typ, dtype, convert_axes, convert_dates, keep_default_dates, precise_float, date_unit, encoding, lines, chunksize, compression, nrows, storage_options, encoding_errors, dtype_backend, engine)\u001B[0m\n\u001B[0;32m    902\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mdata \u001B[38;5;241m=\u001B[39m filepath_or_buffer\n\u001B[0;32m    903\u001B[0m \u001B[38;5;28;01melif\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mengine \u001B[38;5;241m==\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mujson\u001B[39m\u001B[38;5;124m\"\u001B[39m:\n\u001B[1;32m--> 904\u001B[0m     data \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_get_data_from_filepath\u001B[49m\u001B[43m(\u001B[49m\u001B[43mfilepath_or_buffer\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    905\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mdata \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_preprocess_data(data)\n",
+      "File \u001B[1;32mD:\\Soft\\Python\\lib\\site-packages\\pandas\\io\\json\\_json.py:960\u001B[0m, in \u001B[0;36mJsonReader._get_data_from_filepath\u001B[1;34m(self, filepath_or_buffer)\u001B[0m\n\u001B[0;32m    952\u001B[0m     filepath_or_buffer \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mhandles\u001B[38;5;241m.\u001B[39mhandle\n\u001B[0;32m    953\u001B[0m \u001B[38;5;28;01melif\u001B[39;00m (\n\u001B[0;32m    954\u001B[0m     \u001B[38;5;28misinstance\u001B[39m(filepath_or_buffer, \u001B[38;5;28mstr\u001B[39m)\n\u001B[0;32m    955\u001B[0m     \u001B[38;5;129;01mand\u001B[39;00m filepath_or_buffer\u001B[38;5;241m.\u001B[39mlower()\u001B[38;5;241m.\u001B[39mendswith(\n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m    958\u001B[0m     \u001B[38;5;129;01mand\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m file_exists(filepath_or_buffer)\n\u001B[0;32m    959\u001B[0m ):\n\u001B[1;32m--> 960\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mFileNotFoundError\u001B[39;00m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mFile \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mfilepath_or_buffer\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m does not exist\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m    961\u001B[0m \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[0;32m    962\u001B[0m     warnings\u001B[38;5;241m.\u001B[39mwarn(\n\u001B[0;32m    963\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mPassing literal json to \u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mread_json\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m is deprecated and \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m    964\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mwill be removed in a future version. To read from a \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m    967\u001B[0m         stacklevel\u001B[38;5;241m=\u001B[39mfind_stack_level(),\n\u001B[0;32m    968\u001B[0m     )\n",
+      "\u001B[1;31mFileNotFoundError\u001B[0m: File ../asset-1/telemetry.json does not exist"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "import sys\n",
+    "from io import StringIO\n",
     "\n",
-    "telemetry = pd.read_json(\"../asset-1/telemetry.json\")\n",
+    "id = sys.argv[1]\n",
+    "typeId = sys.argv[2]\n",
+    "path = \"./asset-\"+sys.argv[1]\n",
+    "\n",
+    "\n",
+    "client = MongoClient(\"mongodb://root:example@localhost:27017/\")  # Подключаемся к MongoDB\n",
+    "db = client['shanti']  # Имя базы данных\n",
+    "data_object = db.data_objects.find_one({\"assetId\": int(id)})\n",
+    "telemetry = pd.read_json(StringIO(data_object[\"telemetry\"]))\n",
     "telemetry=telemetry.rename(columns={0: \"key\", 1: \"assetId\", 2: \"datetime\", 3: \"pressure\", 4:\"rotate\", 5:\"vibration\", 6:\"volt\"})\n",
     "telemetry=telemetry.drop([\"key\", \"assetId\"], axis=1)\n",
     "telemetry['datetime']=pd.to_datetime(telemetry['datetime'])\n",
     "\n",
-    "defects = pd.read_json(\"../asset-1/defects.json\")\n",
+    "\n",
+    "defects = pd.read_json(StringIO(data_object[\"defects\"]))\n",
     "defects=defects.rename(columns={\"Datetime\": \"datetime\", \"Type\":\"type\"})\n",
     "defects['datetime']=pd.to_datetime(defects['datetime'])\n",
     "\n",
-    "works = pd.read_json(\"../asset-1/works.json\")\n",
+    "works = pd.read_json(StringIO(data_object[\"works\"]))\n",
     "works=works.rename(columns={\"Datetime\": \"datetime_work\", \"Type\": \"type\"})\n",
     "works['datetime_work']=pd.to_datetime(works['datetime_work'])\n",
     "works=works.drop([\"type\"], axis=1)\n",
     "\n",
-    "fails = pd.read_json(\"../asset-1/failures.json\")\n",
+    "fails = pd.read_json(StringIO(data_object[\"failures\"]))\n",
     "fails = fails.rename(columns={\"Datetime\": \"datetime_fail\", \"Type\": \"type_fail\"})\n",
     "fails['datetime_fail']=pd.to_datetime(fails['datetime_fail'])\n",
     "\n",
@@ -351,37 +373,40 @@
     "    start_time = row['datetime_work']\n",
     "    end_time = row['datetime']\n",
     "\n",
-    "    defects_in_range = defects[(defects['datetime'] > start_time) & (defects['datetime'] <= end_time)]\n",
+    "    defects_in_range = defects[(defects['datetime'] > start_time) & (defects['datetime'] < end_time)]\n",
     "\n",
     "    error_counts = defects_in_range['type'].value_counts()\n",
     "    for error_type, count in error_counts.items():\n",
     "        telemetry.at[idx, f'error_{error_type}'] = count\n",
     "\n",
-    "telemetry['volt_last_hour'] = telemetry['volt'].shift(1)\n",
-    "telemetry['pressure_last_hour'] = telemetry['pressure'].shift(1)\n",
-    "telemetry['rotate_last_hour'] = telemetry['rotate'].shift(1)\n",
-    "telemetry['vibration_last_hour'] = telemetry['vibration'].shift(1)\n",
+    "telemetry['datetime'] = pd.to_datetime(telemetry['datetime'], errors='coerce')\n",
+    "telemetry = telemetry.dropna(subset=['datetime'])\n",
+    "telemetry.set_index('datetime', inplace=True)\n",
     "\n",
-    "telemetry['volt_change'] = telemetry['volt'] - telemetry['volt_last_hour']\n",
-    "telemetry['pressure_change'] = telemetry['pressure'] - telemetry['pressure_last_hour']\n",
-    "telemetry['rotate_change'] = telemetry['rotate'] - telemetry['rotate_last_hour']\n",
-    "telemetry['vibration_change'] = telemetry['vibration'] - telemetry['vibration_last_hour']\n",
+    "columns_to_resample = ['volt', 'pressure', 'vibration', 'rotate']\n",
+    "daily_mean = telemetry[columns_to_resample].resample('24h').mean().rename(columns=lambda x: f\"{x}_daily_mean\")\n",
+    "telemetry = telemetry.merge(daily_mean, left_index=True, right_index=True, how='left')\n",
     "\n",
     "telemetry = telemetry.drop([\"datetime_fail\", \"datetime_work\"], axis=1)\n",
-    "telemetry = telemetry.drop([\"volt\", \"pressure\", \"rotate\", \"vibration\"], axis=1)\n",
-    "telemetry = telemetry.drop([\"volt_last_hour\", \"pressure_last_hour\", \"rotate_last_hour\", \"vibration_last_hour\"], axis=1)\n",
     "telemetry = telemetry.dropna()\n",
-    "telemetry.to_csv(\"data.csv\")"
+    "\n",
+    "db.prepared_data.delete_many({\"assetId\": typeId})\n",
+    "data = {\n",
+    "    \"assetId\": int(id),\n",
+    "    \"typeId\": int(typeId),\n",
+    "    \"telemetry\": telemetry.to_csv(),\n",
+    "}\n",
+    "db.prepared_data.insert_one(data)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-05T01:57:07.634308Z",
-     "start_time": "2024-11-05T01:57:03.681491Z"
+     "end_time": "2024-11-06T03:48:17.911365Z",
+     "start_time": "2024-11-06T03:48:17.376066Z"
     }
    },
    "id": "829b5b79a825238f",
-   "execution_count": 211
+   "execution_count": 1
   },
   {
    "cell_type": "code",
